--- a/3AD/Lecture-9/views/index.ejs
+++ b/3AD/Lecture-9/views/index.ejs
@@ -9,7 +9,7 @@
     <h1>show All blogs</h1>
     <% for(let blog of blogs) {%>
         <h3>title : <%=blog.title%> </h3>
-        <img src="<%=blog.url%>" alt="....">
+        <img src="<%=blog.imgUrl%>" alt="....">
         <p><%=blog.desc%></p>
         <% } %>
         <button>show</button> 
