--- a/3AD/Lecture-9/views/new.ejs
+++ b/3AD/Lecture-9/views/new.ejs
@@ -9,13 +9,13 @@
     <h1>new blog</h1>
     <form action="/blog/:id" method="post">
         <label for="">tittle</label>
-        <input type="text" name="" id="">
+        <input type="text" name="title" id="">
         <br>
         <label for="">url</label>
-        <input type="text" name="" id="">
+        <input type="text" name="imgUrl" id="">
         <br>
         <label for="">description</label>
-        <textarea name="" id=""></textarea>
+        <textarea name="desc" id=""></textarea>
     </form>
 </body>
 </html>
