--- a/3T/Lecture-8/views/new.ejs
+++ b/3T/Lecture-8/views/new.ejs
@@ -6,17 +6,16 @@
     <title>new blog</title>
 </head>
 <body>
-    <h2>new blog</h2>
-    <form action="/blogs" method="post">
-        <label for="">title</label>
-        <input type="text" name="" id="">
+    <h1>new blog</h1>
+    <form action="/blog/:id" method="post">
+        <label for="">tittle</label>
+        <input type="text" name="title" id="">
         <br>
-        <label for="">URl</label>
-        <input type="text" name="" id="">
+        <label for="">url</label>
+        <input type="text" name="imgUrl" id="">
         <br>
-        <label for="">Description</label>
-        <textarea name="" id=""></textarea>
+        <label for="">description</label>
+        <textarea name="desc" id=""></textarea>
     </form>
-    
 </body>
 </html>
