--- a/3AD/Lab-4/e-com/views/index.ejs
+++ b/3AD/Lab-4/e-com/views/index.ejs
@@ -13,6 +13,7 @@
             <h6> title: <%=product.title %></h6>
             <p>desc :  <%=product.desc %></p>
             <h3>price: <%=product.price%></h3>
+            <button> <a href="/product/<%=product._id%>/edit">Edit</a></button>
         </div>
         <% } %>
 </body>
