--- a/3AD/Lab-4/e-com/views/edit.ejs
+++ b/3AD/Lab-4/e-com/views/edit.ejs
@@ -9,11 +9,11 @@
     <h1>Edit Product</h1>
     <form action="/product/edit?_method=PUT" method="post" >
         <label for="">title</label>
-        <input type="text" name="" id="title" 
+        <input type="text" name="title" id="" 
         value="<%=p1.title%>">
         <br>
         <label for="">img-url</label>
-        <input type="text" name="" id="img_url" 
+        <input type="text" name="img_url" id="" 
         value="<%=p1.img_url%>">
         <br>
         <label for="">Price</label>
