--- a/3Y/Lab-4/E-commerce/views/new.ejs
+++ b/3Y/Lab-4/E-commerce/views/new.ejs
@@ -20,6 +20,8 @@
         <label for="">desc</label>
         <textarea name="desc" id="">
         </textarea>
+        <br>
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
