--- a/3O/lab-2/E-commerce/views/index.ejs
+++ b/3O/lab-2/E-commerce/views/index.ejs
@@ -13,6 +13,7 @@
             <h6><%=p1.title %></h6>
             <h1><%=p1.price %></h1>
             <p><%=p1.desc %></p>
+            <button><a href="/product/<%=p1._id%>/edit">edit</a></button>
         </div>
         <% } %>
 </body>
