--- a/3Y/Lab-4/E-commerce/views/index.ejs
+++ b/3Y/Lab-4/E-commerce/views/index.ejs
@@ -14,6 +14,9 @@
                 <p>desc :  <%=product.desc %></p>
                 <h3>price: <%=product.price%></h3>
                 <button><a href="/product/<%=product._id%>/edit">edit</a></button>
+                <form action="/product/delete/<%=product._id%>?_method=DELETE">
+                    <button type="submit">delete</button>
+                </form>
             </div>
         <% } %>
 </body>
